HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractEntryNonBitcopy/Expected.uv
//! Expected diagnostic metadata for the ContractEntryNonBitcopy rejected-source specimen.

expectedDiagnostic("E-SEM-2805", "rule.15.Entry-Type")
